fixing letter-spacing

--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -9,7 +9,6 @@ body {
 
 body * {
     box-sizing: border-box;
-    letter-spacing: 1px;
     word-break: break-word;
 }
 
