--- a/assets/styles/navigation.css
+++ b/assets/styles/navigation.css
@@ -13,6 +13,7 @@ a.snav__item,
     display: inline-block;
     font-size: var(--font-size-small);
     font-weight: 700;
+    letter-spacing: 1px;
     outline: none;
     padding: var(--spacing-xsmall);
     text-transform: uppercase;
